# nano-backend.ai

./: .coderabbit.yaml  .gitignore  .golangci.yml  CLAUDE.md  Cargo.toml  Makefile  README.md  SPEC-ko.md  SPEC.md  epic-issue-ko.md  epic-issue.md  go.mod  go.sum  init.md
.claude/skills/: README.md
.claude/skills/analyze/: SKILL.md
.claude/skills/autopilot/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/go-guide/: GO_CODING_GUIDELINES.md  SKILL.md
.claude/skills/pilot/: SKILL.md
.claude/skills/rust-guide/: SKILL.md
.claude/skills/spawn-worker/: SKILL.md
.claude/skills/submit/: SKILL.md
.claude/skills/tdd-guide/: SKILL.md
.github/workflows/: ci.yml  codex-review.yml
cmd/agent/: main.go
cmd/manager/: main.go
crates/agent/: Cargo.toml
crates/agent/src/: error.rs  main.rs
crates/common/: CLAUDE.md  Cargo.toml
crates/common/src/: error.rs  kernel.rs  lib.rs  response.rs
crates/manager/: CLAUDE.md  Cargo.toml
crates/manager/src/: app.rs  error.rs  health.rs  main.rs
docs/design/: 0001-session-kernel-pipeline.md
docs/education/: 01-lora-sft-basics.md  02-preset-over-entrypoint.md  03-reproducibility-and-artifacts.md  04-preparing-vs-running-failure.md
docs/issues/: create-issues.sh  epic-rust-to-go-migration.md  story-s1-go-project-scaffold.md  story-s2-common-package-porting.md  story-s3-manager-porting.md  story-s4-agent-scaffold-porting.md  story-s5-documentation-go-conversion.md  story-s6-skills-go-conversion.md  story-s7-design-doc-go-conversion.md
docs/learn/: 0001-cargo-workspace-health-api.md  README.md
docs/learn/0002-agent-scaffold/: README.md  rust.md
docs/learn/0003-common-package/: README.md  code-design.md  go.md
docs/learn/0003-kernel-types/: README.md  backend-ai.md  code-design.md  rust.md
docs/learn/0004-local-process-runtime/: README.md  code-design.md  cs.md  go.md
docs/learn/0004-rust-cleanup/: README.md  code-design.md
internal/agent/: container.go  error.go  error_test.go  local_process.go  local_process_test.go
internal/common/: image.go  image_test.go  kernel.go  kernel_test.go  response.go  response_test.go
internal/manager/: app.go  app_test.go  error.go  health.go
(+20 files in other folders)
