[package]
name = "nano-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "nano-manager"
path = "src/main.rs"

[dependencies]
nano-common = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
